# hafenmeister

./: .dockerignore  .gitignore  .sops.yaml  LICENSE  README.rst  pyproject.toml  renovate.json  setup.cfg  skaffold.yaml  skaffold_wrapper.sh
.github/workflows/: build_and_deploy.yaml
app/: manage.py
app/config/: api_router.py  celery_app.py  urls.py  wsgi.py
app/config/settings/: base.py  local.py  production.py  test.py
app/hafenmeister/: conftest.py
app/hafenmeister/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
app/hafenmeister/flux/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
app/hafenmeister/flux/migrations/: 0001_initial.py  0002_fluxwebhooktransactionmodel.py  0003_auto_20211228_1702.py  0004_auto_20211229_0814.py  0005_alter_fluxobjectmodel_options.py  0006_fluxeventmodel_associated_transaction.py  0007_auto_20211229_0940.py
app/hafenmeister/flux/templates/flux/: cluster_resource_manifests.yaml
app/hafenmeister/sensors/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
app/hafenmeister/sensors/migrations/: 0001_initial.py  0002_sensorsdevice_sensorsmeasurement.py
app/hafenmeister/templates/: base.html
app/hafenmeister/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/hafenmeister/users/migrations/: 0001_initial.py  0002_alter_usersusermodel_managers.py  0003_auto_20211229_1234.py
app/hafenmeister/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
app/hafenmeister/utils/: middleware.py
charts/hafenmeister/: Chart.yaml  values.yaml
charts/hafenmeister/templates/: _helpers.tpl  _labels.tpl  configs.yaml  ingress.yaml  secrets.yaml  serviceaccount.yaml
charts/hafenmeister/templates/celerybeat/: deployment.yaml
charts/hafenmeister/templates/celeryflower/: deployment.yaml  service.yaml  servicemonitor.yaml
charts/hafenmeister/templates/celeryworker/: deployment.yaml
charts/hafenmeister/templates/django/: deployment.yaml  poddisruptionbudget.yaml  service.yaml
charts/hafenmeister/templates/mailhog/: deployment.yaml  service.yaml
charts/hafenmeister/templates/networkpolicies/: allow-celeryflower-metric-access-from-external.yaml  allow-cross-psql.yaml  allow-cross-rabbitmq.yaml  allow-django-access-from-external.yaml  allow-mailhog-access-from-external.yaml  allow-mailhog-access.yaml  allow-psql-access-from-operator.yaml  allow-psql-access.yaml  allow-psql-metric-access-from-external.yaml  allow-rabbitmq-access.yaml  allow-staticfiles-access-from-external.yaml  default-deny.yaml
charts/hafenmeister/templates/postgresql/: postgresql-pod-configuration.yaml  postgresql.yaml
charts/hafenmeister/templates/rabbitmq/: RabbitmqCluster.yaml
charts/hafenmeister/templates/staticfiles/: deployment.yaml  poddisruptionbudget.yaml  service.yaml
compose/django/: Dockerfile  celerybeat  celeryflower  celeryworker  entrypoint  gunicorn  health.py  migrate  runserver
compose/staticfiles/: Dockerfile  nginx-default.conf
deployment/development/: secrets.yaml  values.yaml
deployment/production/: secrets.yaml  values.yaml
