[tool.poetry]
name = "hafenmeister"
version = "0.1.0"
description = "Flux state tracking app"
authors = ["Vincent Schänzer <vincent@schaenzer.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytz = "2021.3"
python-slugify = "5.0.2"
Pillow = "8.4.0"
argon2-cffi = "21.2.0"
redis = "3.5.3"
hiredis = "2.0.0"
celery = "5.2.1"
django-celery-beat = "2.2.1"
flower = "1.0.0"
Django = "3.2.10"
django-environ = "0.8.1"
django-model-utils = "4.2.0"
django-allauth = "0.46.0"
django-crispy-forms = "1.13.0"
crispy-bootstrap5 = "0.6"
django-redis = "5.1.0"
djangorestframework = "3.12.4"
django-cors-headers = "3.10.1"
gunicorn = "20.1.0"
psycopg2-binary = "2.9.2"
Collectfast = "2.2.0"
django-storages = {version = "1.12.3", extras = ["boto3"]}
django-anymail = {version = "8.4", extras = ["mailgun"]}

[tool.poetry.dev-dependencies]
pytz = "2021.3"
python-slugify = "5.0.2"
Pillow = "8.4.0"
argon2-cffi = "21.2.0"
redis = "3.5.3"
hiredis = "2.0.0"
celery = "5.2.1"
django-celery-beat = "2.2.1"
flower = "1.0.0"
Django = "3.2.10"
django-environ = "0.8.1"
django-model-utils = "4.2.0"
django-allauth = "0.46.0"
django-crispy-forms = "1.13.0"
crispy-bootstrap5 = "0.6"
django-redis = "5.1.0"
djangorestframework = "3.12.4"
django-cors-headers = "3.10.1"
Werkzeug = "2.0.2"
ipdb = "0.13.9"
psycopg2-binary = "2.9.2"
watchgod = "0.7"
mypy = "0.910"
django-stubs = "1.9.0"
pytest = "6.2.5"
pytest-sugar = "0.9.4"
djangorestframework-stubs = "1.4.0"
Sphinx = "4.3.1"
sphinx-autobuild = "2021.3.14"
flake8 = "4.0.1"
flake8-isort = "4.1.1"
coverage = "6.2"
black = "21.12b0"
pylint-django = "2.4.4"
pylint-celery = "0.3"
pre-commit = "2.16.0"
factory-boy = "3.2.1"
django-debug-toolbar = "3.2.2"
django-extensions = "3.1.5"
django-coverage-plugin = "2.0.2"
pytest-django = "4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
