[tool.poetry]
name = "hafenmeister"
version = "0.1.0"
description = "Flux state tracking app"
authors = ["Vincent Schänzer <vincent@schaenzer.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytz = "2022.2.1"
python-slugify = "6.1.2"
Pillow = "9.2.0"
argon2-cffi = "21.3.0"
redis = "4.3.4"
hiredis = "2.0.0"
celery = "5.2.7"
django-celery-beat = "2.3.0"
flower = "1.2.0"
Django = "4.1.1"
django-environ = "0.9.0"
django-model-utils = "4.2.0"
django-allauth = "0.51.0"
django-crispy-forms = "1.14.0"
crispy-bootstrap5 = "0.6"
django-redis = "5.2.0"
djangorestframework = "3.14.0"
django-cors-headers = "3.13.0"
gunicorn = "20.1.0"
psycopg2-binary = "2.9.3"
Collectfast = "2.2.0"
django-storages = {version = "1.13.1", extras = ["boto3"]}
django-anymail = {version = "8.6", extras = ["mailgun"]}

[tool.poetry.dev-dependencies]
pytz = "2022.2.1"
python-slugify = "6.1.2"
Pillow = "9.2.0"
argon2-cffi = "21.3.0"
redis = "4.3.4"
hiredis = "2.0.0"
celery = "5.2.7"
django-celery-beat = "2.3.0"
flower = "1.2.0"
Django = "4.1.1"
django-environ = "0.9.0"
django-model-utils = "4.2.0"
django-allauth = "0.51.0"
django-crispy-forms = "1.14.0"
crispy-bootstrap5 = "0.6"
django-redis = "5.2.0"
djangorestframework = "3.14.0"
django-cors-headers = "3.13.0"
Werkzeug = "2.2.2"
ipdb = "0.13.9"
psycopg2-binary = "2.9.3"
watchgod = "0.8.2"
mypy = "0.971"
django-stubs = "1.12.0"
pytest = "7.1.3"
pytest-sugar = "0.9.5"
djangorestframework-stubs = "1.7.0"
Sphinx = "5.2.0.post0"
sphinx-autobuild = "2021.3.14"
flake8 = "5.0.4"
flake8-isort = "4.2.0"
coverage = "6.4.4"
black = "22.8.0"
pylint-django = "2.5.3"
pylint-celery = "0.3"
pre-commit = "2.20.0"
factory-boy = "3.2.1"
django-debug-toolbar = "3.7.0"
django-extensions = "3.2.1"
django-coverage-plugin = "2.0.3"
pytest-django = "4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
